--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
       mc alias set mdstore http://minio:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD};
 
-      mc mb mdstore/mds;
+      mc mb ${MDFILESYSTEM}/${MDBUCKET};
       "
 
     volumes:
