--- a/IMUbackend/sqlc.yaml
+++ b/IMUbackend/sqlc.yaml
@@ -15,6 +15,7 @@ sql:
             package: "db"
             out: "./db"
             emit_json_tags: true
+            emit_interface: true
 overrides:
     go: null
 plugins: []
