--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"svelte": "^5.0.0",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.0.0",
+		"svelte-meta-tags": "^4.1.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
 	},
